# actor.sh

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: index.html
docs/content/: _index.md
docs/content/concepts/: 01-actors-and-worktrees.md  02-roles.md  03-hooks.md  04-ask-blocks.md  05-channel-notifications.md  _index.md
docs/content/getting-started/: 01-introduction.md  02-installation.md  03-first-actor.md  04-watch-dashboard.md  _index.md
docs/content/guides/: 01-claude-config.md  02-codex-config.md  03-settings-kdl.md  04-watch-theme.md  _index.md
docs/content/reference/: 01-cli.md  02-mcp-tools.md  03-config-keys.md  _index.md
docs/js/: animation.js  copy.js
e2e/: README.md
e2e/fakes/: fake_claude.py  fake_codex.py
e2e/harness/: cli.py  fakes_control.py  isolated_home.py  mcp_client.py  pilot.py
e2e/tests/: test_edge_cases.py  test_harness_smoke.py
e2e/tests/cli/: test_actor_dir_layout.py  test_actor_metadata.py  test_aggressive.py  test_aggressive_ux.py  test_assertions_to_break.py  test_codex_path.py  test_codex_with_role.py  test_combinations.py  test_config.py  test_config_format_edges.py  test_config_view_format.py  test_db_resilience.py  test_defaults_block.py  test_discard.py  (+67 more)
proto/: actor.proto
site/: hugo.toml
site/archetypes/: default.md
site/layouts/: index.html
site/static/: CNAME
skills/actor/: SKILL.md  actor.sh  cli.md  test_actor.py
skills/direct/: SKILL.md
spec/: DASHBOARD.md  DECISION-ALIASES.md  PLAN-AGENT-DEFAULTS-REDESIGN.md  PLAN-AGENT-DEFAULTS.md  PLAN-CONFIG-SYSTEM.md  PLAN-OMARCHY-THEME.md  PLAN-STAGE1.md  PLAN.md  V2.md
src/actor/: __init__.py  bootstrap.py  cli.py  cli_format.py  commands.py  config.py  configure.py  daemon.py  daemon_cli.py  db.py  diff_render.py  discovery.py  errors.py  git.py  hooks.py  identity.py  interactive.py  interfaces.py  process.py  protocol.py  run_correlation.py  server.py  service.py  setup.py  types.py  watch.py  wire.py
tests/: test_actor.py  test_cli_and_mcp.py  test_config.py  test_configure.py  test_daemon_methods.py  test_daemon_protocol.py  test_daemon_wire.py  test_diff_view.py  test_hooks.py  test_interactive_manager.py  test_interactive_pty.py  test_interactive_pure.py  test_interactive_widget.py  test_log_append_render.py  test_omarchy_theme.py  test_phase3_resilience.py  test_prerendered_diff.py  test_run_log_offsets.py  test_server_channel_integration.py  test_servers.py  test_service_construction.py  test_setup.py  test_soak.py  test_splash.py  test_streaming_logs.py  test_watch_log_apply_chunking.py  test_watch_log_cache.py  test_watch_log_placeholder.py  test_watch_navigation.py  test_watch_tab_navigation.py
(+116 files in other folders)
