[build-system]
requires = ["uv_build>=0.7,<1"]
build-backend = "uv_build"

[project]
name = "actor-sh"
version = "0.1.0"
description = "Fork reality, create in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Markus Ecker" },
]
keywords = ["cli", "agents", "coding", "parallel", "worktree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]

[project.scripts]
actor = "actor.cli:main"

[project.urls]
Homepage = "https://github.com/mme/actor.sh"
Repository = "https://github.com/mme/actor.sh"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "actor"
