[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "actor-sh"
dynamic = ["version"]
description = "Manage coding agents in parallel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Markus Ecker" },
]
dependencies = [
    "kdl-py>=1.2.0",
    "mcp>=1.0",
    "pyte>=0.8.1",
    "textual>=1.0",
]
keywords = ["cli", "agents", "coding", "parallel", "worktree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]

[project.scripts]
actor = "actor.cli:main"

[project.urls]
Homepage = "https://github.com/mme/actor.sh"
Repository = "https://github.com/mme/actor.sh"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Explicit so a future hatch-vcs default change doesn't silently produce
# surprising versions from our vX.Y.Z tags. setuptools-scm uses tag_regex.
tag_regex = '^v(?P<version>\d+\.\d+\.\d+.*)$'

[tool.hatch.build.targets.wheel]
packages = ["src/actor"]
# Non-Python files inside the package tree (e.g. the bundled skill .md files
# at src/actor/_skill/*.md) ship automatically with the package.
